New Css file added to public folder

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/public/styles.css">
+  <title>My Notes</title>
 </head>
 <body>
-    
+    <form action="POST">
+      <input type ="number">
+      <textarea name="" id=""></textarea>
+      <button>New contact</button>
+    </form>
 </body>
 </html>
