New updates made to my style sheet

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,13 @@
   <title>My Notes</title>
 </head>
 <body>
-    <form action="POST">
+    <form action="">
       <input type ="number">
       <textarea name="" id=""></textarea>
       <button>New contact</button>
     </form>
+    <section>
+      
+    </section>
 </body>
 </html>
